2007-10-17  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSOptionsPanel2.java:
		Fixed behaviour of the output format drop down box.

2007-10-17  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Sending srsName attribute with Queries.

2007-10-16  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/TransactionFactory.java,
        src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Fixed srs parameter of transaction requests.

2007-10-12  Andreas Schmitz <schmitz@lat-lon.de>
		build.xml:
		Set source and target options to 1.5.

2007-10-12  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Feature type list is now sorted.

2007-09-06  Andreas Schmitz <schmitz@lat-lon.de>
        lib/deegree2.jar:
        Added a version of the library which includes support for
        EPSG:2391,2392,2393,2394 and EPSG:3067.

2007-09-06  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,
        src/de/latlon/deejump/plugin/wfs/WFSFrame.java,
        src/de/latlon/deejump/plugin/wfs/WFSPlugIn.java:
        Cosmetic changes, some small fixes.

2007-09-06  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java:
        Added method to convert an AttributeType to an SQL type code.

2007-09-05  Andreas Schmitz <schmitz@lat-lon.de>
        build.properties:
        Made library path relative for ease of use.

2007-09-05  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/WFSPanel.java,
        src/de/latlon/deejump/plugin/wfs/auth/LoginDialog.java,
        src/de/latlon/deejump/plugin/wfs/AbstractWFSWrapper.java:
        Cosmetic changes.

2007-08-24  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/WFSLayerListener.java:
        Fixed non-unicode comment character.
